source/lang/parser/parser.output
State 33 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: term

    2 term: LET ID COLON type '=' term IN term
    3     | FUN ID COLON type ARROW term
    4     | app_term

    5 app_term: app_term simple_term
    6         | simple_term

    7 simple_term: atom
    8            | LPAREN term RPAREN

    9 atom: TRUE
   10     | FALSE
   11     | INTLIT
   12     | FLOATLIT
   13     | STRINGLIT
   14     | LPAREN RPAREN
   15     | ID
   16     | LPAREN term COMMA term RPAREN

   17 type: arrow_type

   18 arrow_type: tuple_type ARROW arrow_type
   19           | tuple_type

   20 tuple_type: tuple_type STAR base_type
   21           | base_type

   22 base_type: LPAREN type RPAREN
   23          | UNIT
   24          | BOOL
   25          | INT
   26          | FLOAT
   27          | STRING


Terminals, with rules where they appear

    $end (0) 0
    '=' (61) 2
    error (256)
    LET (258) 2
    IN (259) 2
    FUN (260) 3
    COLON (261) 2 3
    ARROW (262) 3 18
    STAR (263) 20
    COMMA (264) 16
    LPAREN (265) 8 14 16 22
    RPAREN (266) 8 14 16 22
    TRUE (267) 9
    FALSE (268) 10
    INTLIT <int> (269) 11
    FLOATLIT <float> (270) 12
    STRINGLIT <std::string> (271) 13
    UNIT (272) 23
    BOOL (273) 24
    INT (274) 25
    FLOAT (275) 26
    STRING (276) 27
    ID <std::string> (277) 2 3 15


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    program (25)
        on left: 1
        on right: 0
    term <Term*> (26)
        on left: 2 3 4
        on right: 1 2 3 8 16
    app_term <Term*> (27)
        on left: 5 6
        on right: 4 5
    simple_term <Term*> (28)
        on left: 7 8
        on right: 5 6
    atom <Term*> (29)
        on left: 9 10 11 12 13 14 15 16
        on right: 7
    type <Type*> (30)
        on left: 17
        on right: 2 3 22
    arrow_type <Type*> (31)
        on left: 18 19
        on right: 17 18
    tuple_type <Type*> (32)
        on left: 20 21
        on right: 18 19 20
    base_type <Type*> (33)
        on left: 22 23 24 25 26 27
        on right: 20 21


State 0

    0 $accept: • program $end

    LET        shift, and go to state 1
    FUN        shift, and go to state 2
    LPAREN     shift, and go to state 3
    TRUE       shift, and go to state 4
    FALSE      shift, and go to state 5
    INTLIT     shift, and go to state 6
    FLOATLIT   shift, and go to state 7
    STRINGLIT  shift, and go to state 8
    ID         shift, and go to state 9

    program      go to state 10
    term         go to state 11
    app_term     go to state 12
    simple_term  go to state 13
    atom         go to state 14


State 1

    2 term: LET • ID COLON type '=' term IN term

    ID  shift, and go to state 15


State 2

    3 term: FUN • ID COLON type ARROW term

    ID  shift, and go to state 16


State 3

    8 simple_term: LPAREN • term RPAREN
   14 atom: LPAREN • RPAREN
   16     | LPAREN • term COMMA term RPAREN

    LET        shift, and go to state 1
    FUN        shift, and go to state 2
    LPAREN     shift, and go to state 3
    RPAREN     shift, and go to state 17
    TRUE       shift, and go to state 4
    FALSE      shift, and go to state 5
    INTLIT     shift, and go to state 6
    FLOATLIT   shift, and go to state 7
    STRINGLIT  shift, and go to state 8
    ID         shift, and go to state 9

    term         go to state 18
    app_term     go to state 12
    simple_term  go to state 13
    atom         go to state 14


State 4

    9 atom: TRUE •

    $default  reduce using rule 9 (atom)


State 5

   10 atom: FALSE •

    $default  reduce using rule 10 (atom)


State 6

   11 atom: INTLIT •

    $default  reduce using rule 11 (atom)


State 7

   12 atom: FLOATLIT •

    $default  reduce using rule 12 (atom)


State 8

   13 atom: STRINGLIT •

    $default  reduce using rule 13 (atom)


State 9

   15 atom: ID •

    $default  reduce using rule 15 (atom)


State 10

    0 $accept: program • $end

    $end  shift, and go to state 19


State 11

    1 program: term •

    $default  reduce using rule 1 (program)


State 12

    4 term: app_term •
    5 app_term: app_term • simple_term

    LPAREN     shift, and go to state 3
    TRUE       shift, and go to state 4
    FALSE      shift, and go to state 5
    INTLIT     shift, and go to state 6
    FLOATLIT   shift, and go to state 7
    STRINGLIT  shift, and go to state 8
    ID         shift, and go to state 9

    $default  reduce using rule 4 (term)

    simple_term  go to state 20
    atom         go to state 14


State 13

    6 app_term: simple_term •

    $default  reduce using rule 6 (app_term)


State 14

    7 simple_term: atom •

    $default  reduce using rule 7 (simple_term)


State 15

    2 term: LET ID • COLON type '=' term IN term

    COLON  shift, and go to state 21


State 16

    3 term: FUN ID • COLON type ARROW term

    COLON  shift, and go to state 22


State 17

   14 atom: LPAREN RPAREN •

    $default  reduce using rule 14 (atom)


State 18

    8 simple_term: LPAREN term • RPAREN
   16 atom: LPAREN term • COMMA term RPAREN

    COMMA   shift, and go to state 23
    RPAREN  shift, and go to state 24


State 19

    0 $accept: program $end •

    $default  accept


State 20

    5 app_term: app_term simple_term •

    $default  reduce using rule 5 (app_term)


State 21

    2 term: LET ID COLON • type '=' term IN term

    LPAREN  shift, and go to state 25
    UNIT    shift, and go to state 26
    BOOL    shift, and go to state 27
    INT     shift, and go to state 28
    FLOAT   shift, and go to state 29
    STRING  shift, and go to state 30

    type        go to state 31
    arrow_type  go to state 32
    tuple_type  go to state 33
    base_type   go to state 34


State 22

    3 term: FUN ID COLON • type ARROW term

    LPAREN  shift, and go to state 25
    UNIT    shift, and go to state 26
    BOOL    shift, and go to state 27
    INT     shift, and go to state 28
    FLOAT   shift, and go to state 29
    STRING  shift, and go to state 30

    type        go to state 35
    arrow_type  go to state 32
    tuple_type  go to state 33
    base_type   go to state 34


State 23

   16 atom: LPAREN term COMMA • term RPAREN

    LET        shift, and go to state 1
    FUN        shift, and go to state 2
    LPAREN     shift, and go to state 3
    TRUE       shift, and go to state 4
    FALSE      shift, and go to state 5
    INTLIT     shift, and go to state 6
    FLOATLIT   shift, and go to state 7
    STRINGLIT  shift, and go to state 8
    ID         shift, and go to state 9

    term         go to state 36
    app_term     go to state 12
    simple_term  go to state 13
    atom         go to state 14


State 24

    8 simple_term: LPAREN term RPAREN •

    $default  reduce using rule 8 (simple_term)


State 25

   22 base_type: LPAREN • type RPAREN

    LPAREN  shift, and go to state 25
    UNIT    shift, and go to state 26
    BOOL    shift, and go to state 27
    INT     shift, and go to state 28
    FLOAT   shift, and go to state 29
    STRING  shift, and go to state 30

    type        go to state 37
    arrow_type  go to state 32
    tuple_type  go to state 33
    base_type   go to state 34


State 26

   23 base_type: UNIT •

    $default  reduce using rule 23 (base_type)


State 27

   24 base_type: BOOL •

    $default  reduce using rule 24 (base_type)


State 28

   25 base_type: INT •

    $default  reduce using rule 25 (base_type)


State 29

   26 base_type: FLOAT •

    $default  reduce using rule 26 (base_type)


State 30

   27 base_type: STRING •

    $default  reduce using rule 27 (base_type)


State 31

    2 term: LET ID COLON type • '=' term IN term

    '='  shift, and go to state 38


State 32

   17 type: arrow_type •

    $default  reduce using rule 17 (type)


State 33

   18 arrow_type: tuple_type • ARROW arrow_type
   19           | tuple_type •
   20 tuple_type: tuple_type • STAR base_type

    ARROW  shift, and go to state 39
    STAR   shift, and go to state 40

    ARROW     [reduce using rule 19 (arrow_type)]
    $default  reduce using rule 19 (arrow_type)


State 34

   21 tuple_type: base_type •

    $default  reduce using rule 21 (tuple_type)


State 35

    3 term: FUN ID COLON type • ARROW term

    ARROW  shift, and go to state 41


State 36

   16 atom: LPAREN term COMMA term • RPAREN

    RPAREN  shift, and go to state 42


State 37

   22 base_type: LPAREN type • RPAREN

    RPAREN  shift, and go to state 43


State 38

    2 term: LET ID COLON type '=' • term IN term

    LET        shift, and go to state 1
    FUN        shift, and go to state 2
    LPAREN     shift, and go to state 3
    TRUE       shift, and go to state 4
    FALSE      shift, and go to state 5
    INTLIT     shift, and go to state 6
    FLOATLIT   shift, and go to state 7
    STRINGLIT  shift, and go to state 8
    ID         shift, and go to state 9

    term         go to state 44
    app_term     go to state 12
    simple_term  go to state 13
    atom         go to state 14


State 39

   18 arrow_type: tuple_type ARROW • arrow_type

    LPAREN  shift, and go to state 25
    UNIT    shift, and go to state 26
    BOOL    shift, and go to state 27
    INT     shift, and go to state 28
    FLOAT   shift, and go to state 29
    STRING  shift, and go to state 30

    arrow_type  go to state 45
    tuple_type  go to state 33
    base_type   go to state 34


State 40

   20 tuple_type: tuple_type STAR • base_type

    LPAREN  shift, and go to state 25
    UNIT    shift, and go to state 26
    BOOL    shift, and go to state 27
    INT     shift, and go to state 28
    FLOAT   shift, and go to state 29
    STRING  shift, and go to state 30

    base_type  go to state 46


State 41

    3 term: FUN ID COLON type ARROW • term

    LET        shift, and go to state 1
    FUN        shift, and go to state 2
    LPAREN     shift, and go to state 3
    TRUE       shift, and go to state 4
    FALSE      shift, and go to state 5
    INTLIT     shift, and go to state 6
    FLOATLIT   shift, and go to state 7
    STRINGLIT  shift, and go to state 8
    ID         shift, and go to state 9

    term         go to state 47
    app_term     go to state 12
    simple_term  go to state 13
    atom         go to state 14


State 42

   16 atom: LPAREN term COMMA term RPAREN •

    $default  reduce using rule 16 (atom)


State 43

   22 base_type: LPAREN type RPAREN •

    $default  reduce using rule 22 (base_type)


State 44

    2 term: LET ID COLON type '=' term • IN term

    IN  shift, and go to state 48


State 45

   18 arrow_type: tuple_type ARROW arrow_type •

    $default  reduce using rule 18 (arrow_type)


State 46

   20 tuple_type: tuple_type STAR base_type •

    $default  reduce using rule 20 (tuple_type)


State 47

    3 term: FUN ID COLON type ARROW term •

    $default  reduce using rule 3 (term)


State 48

    2 term: LET ID COLON type '=' term IN • term

    LET        shift, and go to state 1
    FUN        shift, and go to state 2
    LPAREN     shift, and go to state 3
    TRUE       shift, and go to state 4
    FALSE      shift, and go to state 5
    INTLIT     shift, and go to state 6
    FLOATLIT   shift, and go to state 7
    STRINGLIT  shift, and go to state 8
    ID         shift, and go to state 9

    term         go to state 49
    app_term     go to state 12
    simple_term  go to state 13
    atom         go to state 14


State 49

    2 term: LET ID COLON type '=' term IN term •

    $default  reduce using rule 2 (term)
